base class framework